feat(misc): Misc

--- a/design/pom.xml
+++ b/design/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <hutool.version>5.7.21</hutool.version>
-        <lombok.version>1.18.22</lombok.version>
+        <lombok.version>1.18.20</lombok.version>
         <junit.version>4.13.2</junit.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -41,6 +41,22 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.11</version>
         </dependency>
     </dependencies>
 
