--- a/base/pom.xml
+++ b/base/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>cc.implicated</groupId>
     <artifactId>base</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>leetcode</module>
+    </modules>
 
     <properties>
         <hutool.version>5.7.21</hutool.version>
